--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -28,6 +28,7 @@ jobs:
               env:
                   NODE_OPTIONS: --max_old_space_size=8192
               run: |-
+                  npm install
                   npm run docs:build
                   > docs/.vitepress/dist/.nojekyll
 
