--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -2,9 +2,9 @@ name: Deploy
 
 on:
     workflow_dispatch:
-    push:
-        branches:
-            - main
+    workflow_run:
+        workflows: [Update]
+        types: [completed]
 
 permissions:
     contents: write
@@ -16,8 +16,7 @@ jobs:
             - name: Checkout
               uses: actions/checkout@v3
               with:
-                  fetch-depth: 0
-                  submodules: true
+                  fetch-depth: 1
 
             - name: Install Node.js
               uses: actions/setup-node@v3
