feat(workflows): update update.yml

--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -31,5 +31,5 @@ jobs:
         git config --local user.name "${{ github.actor }}"
         git remote set-url origin https://${{ github.actor }}:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}
         git add .
-        git commit -m "Automatically update README and completions.json"
+        git commit -m "[bot] update README and completions.json"
         git push
