--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,5 +18,15 @@
                 "completions.json"
             ]
         },
-    ]
+    ],
+    "editor.formatOnSave": true,
+    "[json]": {
+        "editor.defaultFormatter": "esbenp.prettier-vscode"
+    },
+    "[jsonc]": {
+        "editor.defaultFormatter": "esbenp.prettier-vscode"
+    },
+    "[markdown]": {
+        "editor.defaultFormatter": "esbenp.prettier-vscode"
+    }
 }
