--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "devDependencies": {
-    "vue": "^3.4.27",
-    "vitepress": "^1.2.2"
+    "prettier": "^3.3.3",
+    "vitepress": "^1.3.1",
+    "vue": "^3.4.33"
   },
   "scripts": {
     "docs:dev": "vitepress dev docs",
     "docs:build": "vitepress build docs",
-    "docs:preview": "vitepress preview docs"
+    "docs:preview": "vitepress preview docs",
+    "format": "prettier --write \"**/*.{json,md}\" --ignore-path .prettierignore"
   }
 }
