feat(.vscode): update

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -22,5 +22,10 @@
   },
   "[markdown]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "files.eol": "\r\n",
+  "[powershell]": {
+    "editor.defaultFormatter": "ms-vscode.powershell",
+    "files.encoding": "utf8bom"
   }
 }
