chore(github): update issues templates

--- a/.github/ISSUE_TEMPLATE/bug-report-CN.yml
+++ b/.github/ISSUE_TEMPLATE/bug-report-CN.yml
@@ -12,8 +12,10 @@ body:
         - label: 你正在使用 PSCompletions 的最新版本。
           required: true
         - label: 你已经阅读了项目的 README 文件。
+          required: true
+        - label: 你已经在 [Issues](https://github.com/abgox/PSCompletions/issues) 中搜索了相关问题。
+          required: true
         - label: 你已经查看了 https://pscompletions.pages.dev/
-        - label: 你已经在 [Issues](https://github.com/abgox/PSCompletions/issues) 中搜索相关问题。
   - type: dropdown
     id: powershell-version
     attributes:
