--- a/.github/ISSUE_TEMPLATE/bug-report.yml
+++ b/.github/ISSUE_TEMPLATE/bug-report.yml
@@ -12,8 +12,10 @@ body:
         - label: You are using the latest version of PSCompletions.
           required: true
         - label: You have read this repository's README file.
-        - label: You have visit https://pscompletions.pages.dev/
+          required: true
         - label: You have search for related issues in [Issues](https://github.com/abgox/PSCompletions/issues).
+          required: true
+        - label: You have visit https://pscompletions.pages.dev/
   - type: dropdown
     id: powershell-version
     attributes:
