feat(schema): add schema

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,13 +1,13 @@
 {
   "json.schemas": [
     {
-      "url": "https://abgox.github.io/schema/PSCompletions/zh-CN/config-min.json",
+      "url": "/schema/zh-CN/config.json",
       "fileMatch": [
         "completions/**/config.json"
       ]
     },
     {
-      "url": "https://abgox.github.io/schema/PSCompletions/zh-CN/completion-min.json",
+      "url": "/schema/zh-CN/completion.json",
       "fileMatch": [
         "completions/**/language/*.json"
       ]
