--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,9 +15,5 @@
   ],
   "editor.formatOnSave": true,
   "editor.defaultFormatter": "esbenp.prettier-vscode",
-  "files.eol": "\r\n",
-  "[powershell]": {
-    "editor.defaultFormatter": "ms-vscode.powershell",
-    "files.encoding": "utf8bom"
-  }
+  "files.eol": "\r\n"
 }
