feat(schema): update

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,12 @@
       ]
     },
     {
+      "url": "/schema/zh-CN/completion-cn.json",
+      "fileMatch": [
+        "completions/**/language/zh-CN.json"
+      ]
+    },
+    {
       "url": "/schema/zh-CN/completion.json",
       "fileMatch": [
         "completions/**/language/*.json"
