docs: 更新 issue 模板

--- a/.github/ISSUE_TEMPLATE/bug-report-CN.yml
+++ b/.github/ISSUE_TEMPLATE/bug-report-CN.yml
@@ -1,7 +1,14 @@
 name: "🐞 Bug 报告"
 description: 提交一个 Bug 报告
 title: "[Bug]: "
-labels: ["bug"]
+labels:
+  [
+    "bug",
+  ]
+assignees:
+  [
+    abgox,
+  ]
 body:
   - type: checkboxes
     id: checks
@@ -15,12 +22,13 @@ body:
           required: true
         - label: 你已经在 [Issues](https://github.com/abgox/PSCompletions/issues) 中搜索了相关问题。
           required: true
-        - label: 你已经查看了 https://pscompletions.pages.dev/
+        - label: 你已经查看了 https://pscompletions.abgox.com/
   - type: dropdown
     id: powershell-version
     attributes:
       label: 你正在使用什么 Powershell 版本?
-      description: |
+      description:
+        |
         [PowerShell (pwsh)](https://github.com/PowerShell/PowerShell)
         [Windows PowerShell (Windows 内置版本)](https://learn.microsoft.com/powershell/scripting/what-is-windows-powershell)
       options:
