--- a/.github/ISSUE_TEMPLATE/completion-add-request-CN.yml
+++ b/.github/ISSUE_TEMPLATE/completion-add-request-CN.yml
@@ -1,7 +1,15 @@
 name: ✨ 补全添加请求
 description: 请求添加新补全
 title: "[Add Completion Request]: "
-labels: ["feature", "Add Completion"]
+labels:
+  [
+    "feature",
+    "Add Completion",
+  ]
+assignees:
+  [
+    abgox,
+  ]
 body:
   - type: input
     id: completion
@@ -13,7 +21,8 @@ body:
     id: documentation
     attributes:
       label: 此补全的命令来源
-      description: |
+      description:
+        |
         此补全来源于什么命令？
         请提供命令的官网文档链接，或描述。
       placeholder: 例如，输入命令的官网文档链接
