--- a/.github/ISSUE_TEMPLATE/completion-update-request-CN.yml
+++ b/.github/ISSUE_TEMPLATE/completion-update-request-CN.yml
@@ -1,7 +1,15 @@
 name: ✨ 补全更新请求
 description: 请求更新现有补全
 title: "[Update Completion Request]: "
-labels: ["feature", "Update Completion"]
+labels:
+  [
+    "feature",
+    "Update Completion",
+  ]
+assignees:
+  [
+    abgox,
+  ]
 body:
   - type: input
     id: completion
