--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,5 +1,5 @@
 blank_issues_enabled: false
 contact_links:
-  - name: docs
-    url: https://pscompletions.pages.dev/
+  - name: website
+    url: https://pscompletions.abgox.com/
     about: Visit it for more information.
