--- a/.github/ISSUE_TEMPLATE/feature-request-CN.yml
+++ b/.github/ISSUE_TEMPLATE/feature-request-CN.yml
@@ -1,13 +1,21 @@
 name: 💡 功能请求
 description: 请求一个新功能或功能增强
 title: "[Request]: "
-labels: ["feature"]
+labels:
+  [
+    "feature",
+  ]
+assignees:
+  [
+    abgox,
+  ]
 body:
   - type: textarea
     id: description
     attributes:
       label: 描述这个功能请求
-      description: |
+      description:
+        |
         请详细描述您的功能要求或增强。
         它解决了 PSCompletions 中的哪些不足?
         哪些用例支持您的请求?
@@ -17,7 +25,8 @@ body:
     id: powershell-version
     attributes:
       label: 你正在使用什么 Powershell 版本?
-      description: |
+      description:
+        |
         [PowerShell (pwsh)](https://github.com/PowerShell/PowerShell)
         [Windows PowerShell (Windows 内置版本)](https://learn.microsoft.com/powershell/scripting/what-is-windows-powershell)
       options:
