--- a/.github/ISSUE_TEMPLATE/bug-report.yml
+++ b/.github/ISSUE_TEMPLATE/bug-report.yml
@@ -1,7 +1,14 @@
 name: "🐞 Bug report"
 description: Create a report to help us improve
 title: "[Bug]: "
-labels: ["bug"]
+labels:
+  [
+    "bug",
+  ]
+assignees:
+  [
+    abgox,
+  ]
 body:
   - type: checkboxes
     id: checks
@@ -15,12 +22,13 @@ body:
           required: true
         - label: You have search for related issues in [Issues](https://github.com/abgox/PSCompletions/issues).
           required: true
-        - label: You have visit https://pscompletions.pages.dev/
+        - label: You have visit https://pscompletions.abgox.com/
   - type: dropdown
     id: powershell-version
     attributes:
       label: What Powershell version are you using?
-      description: |
+      description:
+        |
         [PowerShell (pwsh)](https://github.com/PowerShell/PowerShell)
         [Windows PowerShell (Windows builtin version)](https://learn.microsoft.com/powershell/scripting/what-is-windows-powershell)
       options:
