--- a/.github/ISSUE_TEMPLATE/completion-add-request.yml
+++ b/.github/ISSUE_TEMPLATE/completion-add-request.yml
@@ -1,7 +1,15 @@
 name: ✨ Add Completion Request
 description: Request to add a new completion
 title: "[Add Completion Request]: "
-labels: ["feature", "Add Completion"]
+labels:
+  [
+    "feature",
+    "Add Completion",
+  ]
+assignees:
+  [
+    abgox,
+  ]
 body:
   - type: input
     id: completion
@@ -13,7 +21,8 @@ body:
     id: documentation
     attributes:
       label: Command source for this completion
-      description: |
+      description:
+        |
         What command does this completion come from?
         Please provide its official documentation link or description.
       placeholder: Enter the command source link or description here.
