workflow: 将自动更新的 commit 指向 Github Actions

--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -27,9 +27,9 @@ jobs:
 
       - name: Commit and push changes
         run: |
-          git config --local user.email "abgohxf@outlook.com"
-          git config --local user.name "${{ github.actor }}"
+          git config --local user.name "github-actions[bot]"
+          git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git remote set-url origin https://${{ github.actor }}:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}
           git add .
-          git commit -m "[bot] update README and completions.json"
+          git commit -m "update README and completions.json"
           git push
