workflow: 更新 Github Actions 的提交信息

--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -31,5 +31,5 @@ jobs:
           git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git remote set-url origin https://${{ github.actor }}:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}
           git add .
-          git commit -m "update README and completions.json"
+          git commit -m "Automatically update some files"
           git push
