--- a/.github/ISSUE_TEMPLATE/bug-report-CN.yml
+++ b/.github/ISSUE_TEMPLATE/bug-report-CN.yml
@@ -29,8 +29,8 @@ body:
       label: 你正在使用什么 Powershell 版本?
       description:
         |
-        [PowerShell (pwsh)](https://github.com/PowerShell/PowerShell)
-        [Windows PowerShell (Windows 内置版本)](https://learn.microsoft.com/powershell/scripting/what-is-windows-powershell)
+        - [PowerShell (pwsh)](https://github.com/PowerShell/PowerShell)
+        - [Windows PowerShell (Windows 内置版本)](https://learn.microsoft.com/powershell/scripting/what-is-windows-powershell)
       options:
         - PowerShell
         - Windows PowerShell
@@ -43,7 +43,7 @@ body:
       label: 你正在使用什么系统环境?
       options:
         - Windows
-        - Other system
+        - 其他系统
       multiple: true
     validations:
       required: true
@@ -51,17 +51,27 @@ body:
     id: steps-to-reproduce
     attributes:
       label: bug 复现步骤
-      placeholder: Steps to reproduce
+      placeholder:
+        |
+        如何复现这个 bug?
+        描述尽量简单易懂。
+        如果可以，请提供截图、动图、录屏等来帮助理解这个问题发生的全过程。
     validations:
       required: true
   - type: textarea
     id: expected
     attributes:
       label: 期望结果
+      placeholder:
+        |
+        你认为它应该是什么样的?
   - type: textarea
     id: actually-happening
     attributes:
       label: 实际发生了什么?
+      placeholder:
+        |
+        实际发生了什么?
     validations:
       required: true
   - type: textarea
