--- a/.github/ISSUE_TEMPLATE/bug-report.yml
+++ b/.github/ISSUE_TEMPLATE/bug-report.yml
@@ -29,8 +29,8 @@ body:
       label: What Powershell version are you using?
       description:
         |
-        [PowerShell (pwsh)](https://github.com/PowerShell/PowerShell)
-        [Windows PowerShell (Windows builtin version)](https://learn.microsoft.com/powershell/scripting/what-is-windows-powershell)
+        - [PowerShell (pwsh)](https://github.com/PowerShell/PowerShell)
+        - [Windows PowerShell (Windows builtin version)](https://learn.microsoft.com/powershell/scripting/what-is-windows-powershell)
       options:
         - PowerShell
         - Windows PowerShell
