--- a/.github/ISSUE_TEMPLATE/completion-add-request-CN.yml
+++ b/.github/ISSUE_TEMPLATE/completion-add-request-CN.yml
@@ -15,6 +15,7 @@ body:
     id: completion
     attributes:
       label: 什么补全需要添加? (如：cli命令等)
+      placeholder: git
     validations:
       required: true
   - type: textarea
@@ -23,8 +24,8 @@ body:
       label: 此补全的命令来源
       description:
         |
-        此补全来源于什么命令？
-        请提供命令的官网文档链接，或描述。
+        - 此补全来源于什么命令？
+        - 请提供命令的官网文档链接，或描述。
       placeholder: 例如，输入命令的官网文档链接
     validations:
       required: true
