--- a/.github/ISSUE_TEMPLATE/completion-add-request.yml
+++ b/.github/ISSUE_TEMPLATE/completion-add-request.yml
@@ -15,6 +15,7 @@ body:
     id: completion
     attributes:
       label: What completion need to add? (e.g. cli commands)
+      placeholder: git
     validations:
       required: true
   - type: textarea
@@ -23,8 +24,8 @@ body:
       label: Command source for this completion
       description:
         |
-        What command does this completion come from?
-        Please provide its official documentation link or description.
+        - What command does this completion come from?
+        - Please provide its official documentation link or description.
       placeholder: Enter the command source link or description here.
     validations:
       required: true
