--- a/.github/ISSUE_TEMPLATE/completion-update-request-CN.yml
+++ b/.github/ISSUE_TEMPLATE/completion-update-request-CN.yml
@@ -15,6 +15,7 @@ body:
     id: completion
     attributes:
       label: 什么补全需要更新?
+      placeholder: git
     validations:
       required: true
   - type: textarea
