--- a/.github/ISSUE_TEMPLATE/completion-update-request.yml
+++ b/.github/ISSUE_TEMPLATE/completion-update-request.yml
@@ -15,6 +15,7 @@ body:
     id: completion
     attributes:
       label: What completion need to update?
+      placeholder: git
     validations:
       required: true
   - type: textarea
