--- a/.github/ISSUE_TEMPLATE/feature-request.yml
+++ b/.github/ISSUE_TEMPLATE/feature-request.yml
@@ -16,9 +16,9 @@ body:
       label: Describe the request
       description:
         |
-        Please describe your feature request or enhancement in detail.
-        What deficiency does it address in PSCompletions?
-        What use cases support your request?
+        - Please describe your feature request or enhancement in detail.
+        - What deficiency does it address in PSCompletions?
+        - What use cases support your request?
     validations:
       required: true
   - type: dropdown
@@ -27,8 +27,8 @@ body:
       label: What Powershell version are you using?
       description:
         |
-        [PowerShell (pwsh)](https://github.com/PowerShell/PowerShell)
-        [Windows PowerShell (Windows builtin version)](https://learn.microsoft.com/powershell/scripting/what-is-windows-powershell)
+        - [PowerShell (pwsh)](https://github.com/PowerShell/PowerShell)
+        - [Windows PowerShell (Windows builtin version)](https://learn.microsoft.com/powershell/scripting/what-is-windows-powershell)
       options:
         - PowerShell
         - Windows PowerShell
