--- a/.github/ISSUE_TEMPLATE/feature-request-CN.yml
+++ b/.github/ISSUE_TEMPLATE/feature-request-CN.yml
@@ -16,9 +16,9 @@ body:
       label: 描述这个功能请求
       description:
         |
-        请详细描述您的功能要求或增强。
-        它解决了 PSCompletions 中的哪些不足?
-        哪些用例支持您的请求?
+        - 目前 PSCompletions 存在哪些不足？
+        - 详细描述你需要的功能需求或想法。
+        - 你认为有哪些可行的实现方案作为参考？
     validations:
       required: true
   - type: dropdown
@@ -27,8 +27,8 @@ body:
       label: 你正在使用什么 Powershell 版本?
       description:
         |
-        [PowerShell (pwsh)](https://github.com/PowerShell/PowerShell)
-        [Windows PowerShell (Windows 内置版本)](https://learn.microsoft.com/powershell/scripting/what-is-windows-powershell)
+        - [PowerShell (pwsh)](https://github.com/PowerShell/PowerShell)
+        - [Windows PowerShell (Windows 内置版本)](https://learn.microsoft.com/powershell/scripting/what-is-windows-powershell)
       options:
         - PowerShell
         - Windows PowerShell
