--- a/.github/ISSUE_TEMPLATE/bug-report-CN.yml
+++ b/.github/ISSUE_TEMPLATE/bug-report-CN.yml
@@ -29,7 +29,7 @@ body:
       label: 你正在使用什么 Powershell 版本?
       description:
         |
-        - [PowerShell (pwsh)](https://github.com/PowerShell/PowerShell)
+        - [PowerShell (pwsh)](https://learn.microsoft.com/powershell/scripting/overview)
         - [Windows PowerShell (Windows 内置版本)](https://learn.microsoft.com/powershell/scripting/what-is-windows-powershell)
       options:
         - PowerShell
