--- a/.github/ISSUE_TEMPLATE/bug-report.yml
+++ b/.github/ISSUE_TEMPLATE/bug-report.yml
@@ -29,7 +29,7 @@ body:
       label: What Powershell version are you using?
       description:
         |
-        - [PowerShell (pwsh)](https://github.com/PowerShell/PowerShell)
+        - [PowerShell (pwsh)](https://learn.microsoft.com/powershell/scripting/overview)
         - [Windows PowerShell (Windows builtin version)](https://learn.microsoft.com/powershell/scripting/what-is-windows-powershell)
       options:
         - PowerShell
