ci(github): update sync-github-to-gitee.yml

--- a/.github/workflows/sync-github-to-gitee.yml
+++ b/.github/workflows/sync-github-to-gitee.yml
@@ -54,7 +54,7 @@ jobs:
         git clone --mirror git@github.com:abgox/PSCompletions.git
         cd PSCompletions.git
         git remote add gitee git@gitee.com:abgox/PSCompletions.git
-        git push --mirror gitee
+        git push --mirror gitee --force
 
     - name: Cleanup SSH
       if: always()
