ci: update publish-to-gallery.yml

--- a/.github/workflows/sync-github-to-gitee.yml
+++ b/.github/workflows/sync-github-to-gitee.yml
@@ -59,6 +59,10 @@ jobs:
         git push gitee --force
         git push gitee --tags --force
 
+        git checkout dev
+        git push gitee dev --force
+        git push gitee dev --tags --force
+
     - name: Cleanup SSH
       if: always()
       shell: pwsh
