--- a/.github/workflows/update-content.yml
+++ b/.github/workflows/update-content.yml
@@ -1,4 +1,4 @@
-name: Update
+name: Update Content
 
 on:
   workflow_dispatch:
@@ -13,15 +13,16 @@ jobs:
   build:
     runs-on: windows-latest
     steps:
-      - uses: actions/checkout@v4
-        with:
-          fetch-depth: 1
+      - name: Checkout
+        uses: actions/checkout@v4
 
-      - name: Generate list and update README content
+      - name: Generate list and update content
+        shell: pwsh
         run: |
           .\scripts\auto-update-readme.ps1
 
-      - name: update completions.json
+      - name: Update completions.json
+        shell: pwsh
         run: |
           .\scripts\auto-update-completions.json.ps1
 
@@ -30,5 +31,5 @@ jobs:
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git add .
-          git commit -m "Automatically update some files"
+          git commit -m "Automatically update some content"
           git push
