--- a/.github/workflows/update-content.yml
+++ b/.github/workflows/update-content.yml
@@ -31,5 +31,5 @@ jobs:
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git add .
-          git commit -m "Automatically update some content"
+          git commit -m "chore: automatically update some content"
           git push
