chore: update vscode settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,25 +1,24 @@
 {
+  "[json]": {
+    "prettier.printWidth": 0
+  },
+  "[jsonc]": {
+    "prettier.printWidth": 0
+  },
+  "editor.defaultFormatter": "esbenp.prettier-vscode",
+  "editor.formatOnSave": true,
   "json.schemas": [
     {
-      "url": "/schema/zh-CN/config.json",
       "fileMatch": [
         "completions/**/config.json"
-      ]
+      ],
+      "url": "/schema/zh-CN/config.json"
     },
-    // {
-    //   "url": "/schema/zh-CN/completion-cn.json",
-    //   "fileMatch": [
-    //     "completions/**/language/zh-CN.json"
-    //   ]
-    // },
     {
-      "url": "/schema/zh-CN/completion.json",
       "fileMatch": [
         "completions/**/language/*.json"
-      ]
+      ],
+      "url": "/schema/zh-CN/completion.json"
     }
-  ],
-  "editor.formatOnSave": true,
-  "editor.defaultFormatter": "esbenp.prettier-vscode",
-  "files.eol": "\r\n"
+  ]
 }
