chore: update json schema

--- a/schema/zh-CN/config.json
+++ b/schema/zh-CN/config.json
@@ -27,7 +27,6 @@
       "$ref": "#/definitions/array",
       "description": "设置可用的语言\n如果有效值不包括你想要指定的语言, 请提交一个 issue",
       "examples": [
-        [],
         [
           "en-US",
           "zh-CN"
@@ -641,12 +640,19 @@
           "zh-SG",
           "zh-TW",
           "zu-ZA"
+        ],
+        "markdownEnumDescriptions": [
+          "英文",
+          "简体中文"
         ]
       }
     },
     "hooks": {
       "description": "是否使用 hooks",
-      "type": "boolean"
+      "type": "boolean",
+      "examples": [
+        true
+      ]
     },
     "alias": {
       "$ref": "#/definitions/array_items",
