--- a/.github/ISSUE_TEMPLATE/bug-report.yml
+++ b/.github/ISSUE_TEMPLATE/bug-report.yml
@@ -1,14 +1,8 @@
 name: "🐞 Bug report"
 description: Create a report to help us improve
 title: "[Bug]: "
-labels:
-  [
-    "bug",
-  ]
-assignees:
-  [
-    abgox,
-  ]
+labels: ["bug"]
+assignees: [abgox]
 body:
   - type: checkboxes
     id: checks
@@ -23,18 +17,27 @@ body:
         - label: You have search for related issues in [Issues](https://github.com/abgox/PSCompletions/issues).
           required: true
         - label: You have visit https://pscompletions.abgox.com/
-  - type: dropdown
-    id: powershell-version
+  - type: textarea
     attributes:
-      label: What Powershell version are you using?
-      description:
-        |
+      label: PowerShell Version
+      description: |
         - [PowerShell (pwsh)](https://learn.microsoft.com/powershell/scripting/overview)
-        - [Windows PowerShell (Windows builtin version)](https://learn.microsoft.com/powershell/scripting/what-is-windows-powershell)
-      options:
-        - PowerShell
-        - Windows PowerShell
-      multiple: true
+        - [Windows PowerShell 5.1 (Windows builtin version)](https://learn.microsoft.com/powershell/scripting/what-is-windows-powershell)
+      render: console
+      placeholder: |
+        PS> $PSVersionTable
+
+        Name                           Value
+        ----                           -----
+        PSVersion                      7.5.0
+        PSEdition                      Core
+        GitCommitId                    7.5.0
+        OS                             Microsoft Windows 10.0.26100
+        Platform                       Win32NT
+        PSCompatibleVersions           {1.0, 2.0, 3.0, 4.0…}
+        PSRemotingProtocolVersion      2.3
+        SerializationVersion           1.1.0.1
+        WSManStackVersion              3.0
     validations:
       required: true
   - type: dropdown
