chore: update ISSUE_TEMPLATE

--- a/.github/ISSUE_TEMPLATE/completion-add-request.yml
+++ b/.github/ISSUE_TEMPLATE/completion-add-request.yml
@@ -1,20 +1,17 @@
 name: ✨ Add Completion Request
 description: Request to add a new completion
 title: "[Add Completion Request]: "
-labels:
-  [
-    "feature",
-    "Add Completion",
-  ]
-assignees:
-  [
-    abgox,
-  ]
+labels: ["feature", "Add Completion"]
+assignees: [abgox]
 body:
   - type: input
     id: completion
     attributes:
       label: What completion need to add? (e.g. cli commands)
+      description: |
+        - If the completion exists in [argc-completions](https://github.com/sigoden/argc-completions), it can be [combined with argc-completions](https://pscompletions.abgox.com/tips/pscompletions-and-argc-completions).
+        - If there are completions provided by other modules and CLI, they can also be used.
+
       placeholder: git
     validations:
       required: true
@@ -22,8 +19,7 @@ body:
     id: documentation
     attributes:
       label: Command source for this completion
-      description:
-        |
+      description: |
         - What command does this completion come from?
         - Please provide its official documentation link or description.
       placeholder: Enter the command source link or description here.
