--- a/.github/ISSUE_TEMPLATE/feature-request-cn.yml
+++ b/.github/ISSUE_TEMPLATE/feature-request-cn.yml
@@ -1,21 +1,14 @@
 name: 💡 功能请求
 description: 请求一个新功能或功能增强
 title: "[Request]: "
-labels:
-  [
-    "feature",
-  ]
-assignees:
-  [
-    abgox,
-  ]
+labels: ["feature"]
+assignees: [abgox]
 body:
   - type: textarea
     id: description
     attributes:
       label: 描述这个功能请求
-      description:
-        |
+      description: |
         - 目前 PSCompletions 存在哪些不足？
         - 详细描述你需要的功能需求或想法。
         - 你认为有哪些可行的实现方案作为参考？
@@ -25,10 +18,9 @@ body:
     id: powershell-version
     attributes:
       label: 你正在使用什么 Powershell 版本?
-      description:
-        |
+      description: |
         - [PowerShell (pwsh)](https://learn.microsoft.com/powershell/scripting/overview)
-        - [Windows PowerShell (Windows 内置版本)](https://learn.microsoft.com/powershell/scripting/what-is-windows-powershell)
+        - [Windows PowerShell 5.1 (Windows 内置版本)](https://learn.microsoft.com/powershell/scripting/what-is-windows-powershell)
       options:
         - PowerShell
         - Windows PowerShell
