--- a/.github/ISSUE_TEMPLATE/feature-request.yml
+++ b/.github/ISSUE_TEMPLATE/feature-request.yml
@@ -1,21 +1,14 @@
 name: 💡Feature Request
 description: Request a new feature or enhancement
 title: "[Request]: "
-labels:
-  [
-    "feature",
-  ]
-assignees:
-  [
-    abgox,
-  ]
+labels: ["feature"]
+assignees: [abgox]
 body:
   - type: textarea
     id: description
     attributes:
       label: Describe the request
-      description:
-        |
+      description: |
         - Please describe your feature request or enhancement in detail.
         - What deficiency does it address in PSCompletions?
         - What use cases support your request?
@@ -25,10 +18,9 @@ body:
     id: powershell-version
     attributes:
       label: What Powershell version are you using?
-      description:
-        |
+      description: |
         - [PowerShell (pwsh)](https://learn.microsoft.com/powershell/scripting/overview)
-        - [Windows PowerShell (Windows builtin version)](https://learn.microsoft.com/powershell/scripting/what-is-windows-powershell)
+        - [Windows PowerShell 5.1 (Windows builtin version)](https://learn.microsoft.com/powershell/scripting/what-is-windows-powershell)
       options:
         - PowerShell
         - Windows PowerShell
