chore: update ISSUE_TEMPLATE

--- a/.github/ISSUE_TEMPLATE/bug-report-cn.yml
+++ b/.github/ISSUE_TEMPLATE/bug-report-cn.yml
@@ -16,6 +16,8 @@ body:
           required: true
         - label: 你已经在 [Issues](https://github.com/abgox/PSCompletions/issues) 中搜索了相关问题。
           required: true
+        - label: 如果问题和补全菜单的行为相关，请先检查 `psc menu config` 下的相关配置。
+          required: true
         - label: 你已经查看了 https://pscompletions.abgox.com/
   - type: textarea
     attributes:
