--- a/.github/ISSUE_TEMPLATE/bug-report.yml
+++ b/.github/ISSUE_TEMPLATE/bug-report.yml
@@ -16,6 +16,8 @@ body:
           required: true
         - label: You have search for related issues in [Issues](https://github.com/abgox/PSCompletions/issues).
           required: true
+        - label: If it is a problem related to menu, please ensure that you have checked `psc menu config`.
+          required: true
         - label: You have visit https://pscompletions.abgox.com/
   - type: textarea
     attributes:
