--- a/.github/ISSUE_TEMPLATE/feature-request.yml
+++ b/.github/ISSUE_TEMPLATE/feature-request.yml
@@ -4,6 +4,20 @@ title: "[Request]: "
 labels: ["feature"]
 assignees: [abgox]
 body:
+  - type: checkboxes
+    id: checks
+    attributes:
+      label: Before Start
+      options:
+        - label: You are using the latest version of PSCompletions.
+          required: true
+        - label: You have read this repository's README file.
+          required: true
+        - label: You have search for related issues in [Issues](https://github.com/abgox/PSCompletions/issues).
+          required: true
+        - label: If the feature request is related to menu, please ensure that you have checked `psc menu config`.
+          required: true
+        - label: You have visit https://pscompletions.abgox.com/
   - type: textarea
     id: description
     attributes:
