--- a/.github/ISSUE_TEMPLATE/feature-request-cn.yml
+++ b/.github/ISSUE_TEMPLATE/feature-request-cn.yml
@@ -4,6 +4,20 @@ title: "[Request]: "
 labels: ["feature"]
 assignees: [abgox]
 body:
+  - type: checkboxes
+    id: checks
+    attributes:
+      label: 开始之前...
+      options:
+        - label: 你正在使用 PSCompletions 的最新版本。
+          required: true
+        - label: 你已经阅读了项目的 README 文件。
+          required: true
+        - label: 你已经在 [Issues](https://github.com/abgox/PSCompletions/issues) 中搜索了相关问题。
+          required: true
+        - label: 如果功能请求和补全菜单相关，请先检查 `psc menu config` 下的相关配置。
+          required: true
+        - label: 你已经查看了 https://pscompletions.abgox.com/
   - type: textarea
     id: description
     attributes:
