chore: update json schema

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,15 +10,15 @@
   "json.schemas": [
     {
       "fileMatch": [
-        "completions/**/config.json"
+        "completions/*/language/*.json"
       ],
-      "url": "/schema/zh-CN/config.json"
+      "url": "/schema/completion-manifest.zh-CN.json"
     },
     {
       "fileMatch": [
-        "completions/**/language/*.json"
+        "completions/*/config.json"
       ],
-      "url": "/schema/zh-CN/completion.json"
+      "url": "/schema/completion-config.zh-CN.json"
     }
   ]
 }
