chore: update json schema

--- a/schema/completion-manifest.zh-CN.json
+++ b/schema/completion-manifest.zh-CN.json
@@ -38,7 +38,7 @@
     },
     "tip": {
       "$ref": "#/definitions/array-items-string",
-      "markdownDescription": "补全的提示信息\n- 第一项的内容不能以 4+ 个空格或 `n 开头\n- 最后一项的内容不能以 2+ 个空格或 `n 结尾"
+      "markdownDescription": "补全的提示信息"
     },
     "item": {
       "type": "object",
