chore: update ISSUE_TEMPLATE

--- a/.github/ISSUE_TEMPLATE/bug-report-cn.yml
+++ b/.github/ISSUE_TEMPLATE/bug-report-cn.yml
@@ -1,7 +1,7 @@
 name: "🐞 Bug 报告"
 description: 提交一个 Bug 报告
 title: "[Bug]: "
-labels: ["bug"]
+labels: ["bug", "module"]
 assignees: [abgox]
 body:
   - type: checkboxes
