--- a/.github/ISSUE_TEMPLATE/bug-report.yml
+++ b/.github/ISSUE_TEMPLATE/bug-report.yml
@@ -1,7 +1,7 @@
 name: "🐞 Bug report"
 description: Create a report to help us improve
 title: "[Bug]: "
-labels: ["bug"]
+labels: ["bug", "module"]
 assignees: [abgox]
 body:
   - type: checkboxes
