--- a/.github/ISSUE_TEMPLATE/completion-add-request-cn.yml
+++ b/.github/ISSUE_TEMPLATE/completion-add-request-cn.yml
@@ -1,13 +1,13 @@
 name: ✨ 补全添加请求
 description: 请求添加新补全
-title: "[Add Completion Request]: "
-labels: ["feature", "Add Completion"]
+title: "[Add Completion]: "
+labels: ["completion"]
 assignees: [abgox]
 body:
   - type: input
     id: completion
     attributes:
-      label: 什么补全需要添加? (如：cli命令等)
+      label: 什么补全需要添加? (如：cli 命令等)
       description: |
         - 如果补全在 [argc-completions](https://github.com/sigoden/argc-completions) 中存在，[可以与 argc-completions 结合使用](https://pscompletions.abgox.com/tips/pscompletions-and-argc-completions)
         - 如果存在其他模块和 cli 提供补全，也可以使用它们
