--- a/.github/ISSUE_TEMPLATE/completion-add-request.yml
+++ b/.github/ISSUE_TEMPLATE/completion-add-request.yml
@@ -1,7 +1,7 @@
 name: ✨ Add Completion Request
 description: Request to add a new completion
-title: "[Add Completion Request]: "
-labels: ["feature", "Add Completion"]
+title: "[Add Completion]: "
+labels: ["completion"]
 assignees: [abgox]
 body:
   - type: input
