--- a/.github/ISSUE_TEMPLATE/completion-update-request-cn.yml
+++ b/.github/ISSUE_TEMPLATE/completion-update-request-cn.yml
@@ -1,7 +1,7 @@
 name: ✨ 补全更新请求
 description: 请求更新现有补全
-title: "[Update Completion Request]: "
-labels: ["feature", "Update Completion"]
+title: "[Update Completion]: "
+labels: ["completion"]
 assignees: [abgox]
 body:
   - type: input
