--- a/.github/ISSUE_TEMPLATE/completion-update-request.yml
+++ b/.github/ISSUE_TEMPLATE/completion-update-request.yml
@@ -1,7 +1,7 @@
 name: ✨ Update Completion Request
 description: Request to update a new completion
-title: "[Update Completion Request]: "
-labels: ["feature", "Update Completion"]
+title: "[Update Completion]: "
+labels: ["completion"]
 assignees: [abgox]
 body:
   - type: input
