--- a/.github/ISSUE_TEMPLATE/feature-request.yml
+++ b/.github/ISSUE_TEMPLATE/feature-request.yml
@@ -1,7 +1,7 @@
 name: 💡Feature Request
 description: Request a new feature or enhancement
 title: "[Request]: "
-labels: ["feature"]
+labels: ["module"]
 assignees: [abgox]
 body:
   - type: checkboxes
